Render deploy optimization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=doctortime
-spring.datasource.url=jdbc:postgresql://localhost:5432/doctortime
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/doctortime}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
